k8s-manifests/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: 135808944307.dkr.ecr.ap-south-1.amazonaws.com/message-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"  # Minimum amount of memory required
              cpu: "500m"       # Minimum amount of CPU required (500m = 0.5 CPU cores)
            limits:
              memory: "512Mi"   # Maximum memory the container can use
              cpu: "1"        # Maximum CPU the container can use (1 = 1 CPU cores
