k8s-manifests/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
