k8s-manifests/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-service-ingress
spec:
  rules:
    - host: message-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: message-service
                port:
                  number: 80
