k8s-manifests/app/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: message-service-policy
spec:
  podSelector:
    matchLabels:
      app: message-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
